k8s/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cdn-analytics
  namespace: cdn-analytics
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: cdn-analytics
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdn-analytics
  namespace: cdn-analytics
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: cdn-dashboard.wanshinet.cn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cdn-analytics
                port:
                  number: 80
